2001-06-06  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (xml_print_import_smb): Print <user> and <password> tags.
	  Fixes bug #3222.

2001-06-06  Arturo Espinosa Aldama  <arturo@ximian.com>

	* package-conf.in: contributed by Richard Bos <allabos@freeler.nl>
	* Makefile.am: added pertinent entries for package backend.

2001-06-05  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (change_user_chfn): Little fix.

2001-06-04  Hans Petter Jansson  <hpj@ximian.com>

	* disks-conf.in (get_fdisk): Know more about extended partitions.

2001-06-04  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (set): Merge things properly, so old options are kept.
	* filesys.pl.in (xst_filesys_table_merge_subset): Fix doc text.

2001-06-04  Hans Petter Jansson  <hpj@ximian.com>

	* filesys.pl.in (xst_filesys_info_set_network_host): Nicen input slightly.
	  (xst_filesys_info_set_network_path): Nicen input slightly.
	  (xst_filesys_info_get_dump): Return 0 if empty.
	  (xst_filesys_info_get_priority): Return 0 if empty.
	  (xst_filesys_entry_identify): Ensure return values agree with changes
	  in xst_filesys_info_set_network_*().

2001-06-04  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (remove_shares_from_filesys_table): Implement.
	  (set): Remove shares from filesys table.

2001-06-04  Tambet Ingo  <tambet@ximian.com>

        * x.pl.in: Add

	* xconf-conf.pl.in: Add

2001-06-04  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (change_user_chfn): Added hack to support Debian's chfn.

2001-06-01  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_dialing_set): Remove old sections
	that are not in the new values.
	(xst_network_suse70_set_ppp): Remove dialing hash entries,
	instead of removing in the file: this is done in dialing_get.
	(xst_network_iface2dial): don't overwrite login, phone and
	password: that's done at frontend level.
	Typo fixes.

	Lots of other typo fixes in network.pl.in. Basicly, I left